--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.15.1"
+  "packageManager": "pnpm@10.15.1",
+  "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "eslint": ">=9.33.0",
+    "eslint-config-xo": "^0.49.0",
+    "globals": "^16.5.0"
+  }
 }
